k8s-security-framework/policies/pod-security/KSP-POD-004/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-004-exception
  namespace: policy-test
spec:
  hostNetwork: true
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-004-exception-secondary
  namespace: policy-test
spec:
  hostNetwork: true
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-004-exception-tertiary
  namespace: policy-test
spec:
  hostNetwork: true
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
