k8s-security-framework/policies/pod-security/KSP-POD-004/tests/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: disallow-host-network-exception
  namespace: policy-test
spec:
  exceptions:
    - policyName: disallow-host-network
      ruleNames:
        - disallow-host-network
  match:
    any:
      - resources:
          kinds:
            - Pod
          names:
            - ksp-pod-004-exception
          namespaces:
            - policy-test
