k8s-security-framework/policies/pod-security/KSP-POD-004/tests/negative-hostnetwork-true-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-004-negative-true-two
  namespace: policy-test
spec:
  hostNetwork: true
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
