k8s-security-framework/policies/pod-security/KSP-POD-004/tests/positive-hostnetwork-false-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-004-positive-false-two
  namespace: policy-test
spec:
  hostNetwork: false
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
